# Reverse-Engineering

./: .gitattributes  MICROBIT  MICROBIT.hex  README.md  bootsector.asm  dynamic RE schematic.fzz  mastodon.html  oled and button schematic.fzz  static RE schematic.fzz
0x0001-hello_world-x64/: 0x0001-hello_world-x64.sln  0x0001-hello_world-x64.vcxproj  0x0001-hello_world-x64.vcxproj.filters  main.asm
0x0001-hello_world-x64 Debug/: 0x0001-hello_world-x64.exe.i64
0x0001-hello_world-x86/: 0x0001-hello_world-x86.sln  0x0001-hello_world-x86.vcxproj  main.asm
0x0001-hello_world-x86 Debug/: 0x0001-hello_world-x86.exe.i64
0x0001-reversing-exit/: Makefile  main  main.s
0x0001_about_me/: Makefile  main  main.cpp
0x0001_hello_world/: main.cpp
0x0002-64-bit-immediate-values/: Makefile  main  main.s
0x0002_my_fav_nums/: main  main.cpp
0x0003-yet-another-upper/: main  main.s  makefile
0x0003_my_fav_nums/: main  main.cpp
0x0003_program_flow/: Makefile  main  main.cpp
0x0004_functions/: Makefile  data.cpp  data.h  generate_random_number.cpp  main.cpp  mathi.cpp  mathi.h  print_fav_nums_by_value.cpp  print_fav_nums_by_value.h  sum.cpp  sum.h
0x0004_my_fav_funcs/: generate_random_number.h  main.cpp
0x0005_my_fav_pointers/: main  main.cpp  print_fav_nums.cpp  print_fav_nums.h
0x0005_pointers/: build_arr.cpp  build_arr.h  main  main.cpp  print_fav_arr_nums.cpp  print_fav_arr_nums.h
0x0006-directories/: 0x0006-directories.sln  0x0006-directories.vcxproj  main.c
0x0006-directories-x64 Debug/: 0x0006-directories.exe.i64  0x0006-directories.exe.id0  0x0006-directories.exe.id1  0x0006-directories.exe.id2  0x0006-directories.exe.nam  0x0006-directories.exe.til
0x0006-directories-x86 Debug/: 0x0006-directories.exe.i64
0x0006_input/: input.cpp  input.h  main  main.cpp
0x0006_my_input/: input.cpp  main  main.cpp
0x0007-copyfile/: main.c
0x0007-copyfile-x64 Debug/: 0x000b-copyfile.exe.i64
0x0007-directories-x64 Debug/: 0x0006-directories.exe.i64
0x0007_classes/: employee.cpp  employee.h  main  main.cpp
0x0007_my_classes/: hero.cpp  hero.h  main  main.cpp
0x000b-copyfile/: 0x000b-copyfile.sln  (+1 more)
0x000b-copyfile-x86 Debug/: 0x000b-copyfile.exe.i64
0x01p_blink/: main.py
0x02_pico_hello_world/: 0x02_hello_world.c  CMakeLists.txt
0x03_char/: 0x03_char.c  CMakeLists.txt
0x04_int/: 0x04_int.c  CMakeLists.txt
0x05_float/: 0x05_float.c  CMakeLists.txt
0x06_double/: 0x06_double.c  0x06_double_MOD.c  CMakeLists.txt  pico_sdk_import.cmake
0x07_input/: CMakeLists.txt  input.c  input.h  main.c  print.c  print.h
(+222 files in other folders)
